# circular-dependency-scanner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh_CN.md  eslint.config.js  package.json  pnpm-lock.yaml  rslib.config.ts  rustfmt.toml  tsconfig.json  tsdown.config.ts  tsup.config.ts  vitest.config.ts
.cargo/: config.toml
.changeset/: fuzzy-apples-smoke.md  lazy-buttons-rule.md  pre.json
.github/workflows/: publish.yml
fixtures/: test.js
rust/: lib.rs
src/: ast.spec.ts  ast.ts  circle.ts  cli.ts  index.ts  utils.ts  worker.ts
