[package]
name = "bridge"
version = "0.1.0"
edition = "2021"
description = "Core algorithm of circular dependency scanner."
license = "MIT"
repository = "https://github.com/emosheep/circular-dependency-scanner"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
graph-cycles = "0.3.0"
petgraph = "0.8.3"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
wasm-bindgen = "0.2.106"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde-wasm-bindgen = "0.6.5"

[profile.release]
lto = true
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
